# multiboot-usb

./: Jenkinsfile  README.md  pyproject.toml
.hermes/plans/: 2026-06-27_120000-multiboot-usb.md
deploy/: Dockerfile  build-iso.sh  download_icons.py  tui.py
deploy/live-build-config/: config
deploy/live-build-config/hooks/normal/: 9000-multiboot-usb-hook.hook.chroot
deploy/live-build-config/package-lists/: multiboot-usb.list.chroot
deploy/web/: app.py
multiboot_usb/: __init__.py  __main__.py  cli.py  disk.py  grub_config.py  grub_installer.py  iso_scanner.py  metadata_gui.py  platform.py  security.py
multiboot_usb/grub/theme/icons/: README.md
multiboot_usb/grub/theme/terminal/: theme.txt
tests/: test_disk.py  test_grub_config.py  test_iso_scanner.py  test_security.py  test_tui.py  test_web_ui.py
